<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo_4"
        app:layout_constraintEnd_toStartOf="@+id/homeBtn"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/homeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:srcCompat="@drawable/home"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/imgResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.154"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo_6" />

    <ImageView
        android:id="@+id/shareBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/wpBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgResult"
        app:srcCompat="@drawable/share"
        android:contentDescription="@string/todo_7" />

    <ImageView
        android:id="@+id/wpBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/shareBtn"
        app:layout_constraintEnd_toStartOf="@+id/fbBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shareBtn"
        app:layout_constraintTop_toTopOf="@+id/shareBtn"
        app:srcCompat="@drawable/wp_img"
        android:contentDescription="@string/todo_8" />

    <ImageView
        android:id="@+id/fbBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/wpBtn"
        app:layout_constraintEnd_toStartOf="@+id/instaBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wpBtn"
        app:layout_constraintTop_toTopOf="@+id/wpBtn"
        app:srcCompat="@drawable/fb_img"
        android:contentDescription="@string/todo_9" />

    <ImageView
        android:id="@+id/instaBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/fbBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fbBtn"
        app:layout_constraintTop_toTopOf="@+id/fbBtn"
        app:srcCompat="@drawable/insta_img"
        android:contentDescription="@string/todo_10" />
</androidx.constraintlayout.widget.ConstraintLayout>