<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appDsp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/all_in_one_editor"
        android:textColor="#4E342E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/pico"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settingBtn"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <androidx.cardview.widget.CardView
        android:id="@+id/addCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDsp"
        app:layout_constraintVertical_bias="0.19" >
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/red"
        android:contentDescription="@string/todo_2"
        app:layout_constraintEnd_toStartOf="@+id/cameraBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardView"
        app:srcCompat="@drawable/magicwand"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/cameraBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/royal_blue"
        android:contentDescription="@string/todo_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/addCardView"
        app:srcCompat="@drawable/photocamera"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/txtEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintStart_toStartOf="@+id/editBtn"
        app:layout_constraintTop_toBottomOf="@+id/editBtn" />


    <TextView
        android:id="@+id/txtCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/cameraBtn"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>